syntax = "proto3";

option csharp_namespace = "BallchasingWrapper.Grpc";

package ballchasing;

service Ballchasing {
  rpc GetSimpleReplays (RequestFilter) returns (SimpleReplaysResponse);
}

message RequestFilter {
  optional int32 replayCap = 1;
  optional string filterName = 2;
  repeated string names = 3;
  optional string title = 4;
  optional string playlist = 5;
  optional bool freeToPlay = 6;
  optional int32 season = 7;
  repeated string steamIds = 8;
  optional int64 minDate = 9;
  optional int64 maxDate = 10;
}

message SimpleReplaysResponse {
  repeated Replay replays = 1;
}

message Replay {
  string id = 1;
  string title = 2;
  string mapName = 3;
  string playlistName = 4;
  int32 duration = 5;
  bool overtime = 6;
  string date = 7;
  Rank minRank = 8;
  Rank maxRank = 9;
  Team blue = 10;
  Team orange = 11;
}

message Rank {
  string id = 1;
  int32 tier = 2;
  int32 division = 3;
  string name = 4;
}

message Team {
  int32 goals = 1;
  repeated Player players = 2;
}

message Player {
  int32 startTime = 1;
  int32 endTime = 2;
  string name = 3;
  PlayerId id = 4;
  bool mvp = 5;
  Rank rank = 6;
  int32 score = 7;
}

message PlayerId {
  string platform = 1;
  string id = 2;
}